@@ -97,6 +97,7 @@ importFrom(dendextend,as.phylo.dendrogram)
 importFrom(graphics,plot)
 importFrom(howmany,howmany)
 importFrom(howmany,lowerbound)
+importFrom(kernlab,specc)
 importFrom(limma,makeContrasts)
 importFrom(locfdr,locfdr)
 importFrom(matrixStats,rowVars)
